# PythonScrabble

./: .env.example  .gitignore  README.md  game_manager.py  pyproject.toml
game/: __init__.py  __main__.py  board.py  cli.py  exceptions.py  game_manager.py  game_master.py  paths.py  rulebook.py  scrabble_box.py  scrabble_players.py  tile_bag.py  types.py  ui.py
game/data/: tile_scores.json
game/docs/: dictionary.txt  future-options.md  tile_counts.json
game/players/: __init__.py  base.py  computer.py  human.py
game/tests/: test_AIPlayer.py  test_ComputerPlayer.py  test_GameMaster.py  test_Rulebook.py
game/ui/: __init__.py  console.py  highlight.py  panels.py  presenter.py  styles.py
jupyter_notebooks/: game_evaluation.ipynb
tests/: conftest.py  test_board.py  test_computer_player.py  test_game_master.py  test_human_player.py  test_paths.py  test_rulebook.py
